--- a/resources-logic/src/main/res/values/strings.xml
+++ b/resources-logic/src/main/res/values/strings.xml
@@ -318,7 +318,15 @@
         predefined criteria for security, data protection, compliance, and responsible data handling.</string>
 
     <!-- Transaction Details -->
+    <string name="transaction_details_screen_title">Transaction information</string>
     <string name="transaction_details_screen_card_date_label">Date</string>
+    <string name="transaction_details_request_deletion_message">You can request to stop processing personal data linked to this transaction. This may affect your access to services.</string>
+    <string name="transaction_details_report_transaction_message">If you believe this relying party has unlawfully requested personal data, you can report this transaction to the authorities.</string>
+    <string name="transaction_details_request_deletion_button">Request data deletion</string>
+    <string name="transaction_details_report_transaction_button">Report suspicious transaction</string>
+    <string name="transaction_details_data_shared">DATA SHARED</string>
+    <string name="transaction_details_data_signed">DATA SIGNED</string>
+    <string name="transactions_screen_details_section_view_details">@string/generic_view_details</string>
 
     <!-- Proximity QR -->
     <string name="proximity_qr_title">Present document in person</string>
