--- a/resources-logic/src/main/res/values/strings.xml
+++ b/resources-logic/src/main/res/values/strings.xml
@@ -43,6 +43,12 @@
     <string name="generic_bottom_sheet_delete_secondary_button_text">Cancel</string>
     <string name="generic_scan_qr">Scan QR</string>
     <string name="generic_or">OR</string>
+    <string name="generic_filters_apply">Apply</string>
+    <string name="generic_filters_reset">Reset all</string>
+    <string name="generic_filters_title">Filter</string>
+    <string name="generic_filters_sort_by">Sort by</string>
+    <string name="generic_filters_ascending">Ascending</string>
+    <string name="generic_filters_descending">Descending</string>
 
     <!-- Content Description -->
     <string name="content_description_image_or_placeholder_icon">Image or placeholder icon</string>
@@ -242,10 +248,10 @@
     <string name="documents_screen_add_document_option_list">From list</string>
     <string name="documents_screen_add_document_option_qr">@string/generic_scan_qr</string>
     <string name="documents_screen_add_document_option_or">@string/generic_or</string>
-    <string name="documents_screen_filters_title">Filter</string>
-    <string name="documents_screen_filters_sort_by">Sort by</string>
-    <string name="documents_screen_filters_ascending">Ascending</string>
-    <string name="documents_screen_filters_descending">Descending</string>
+    <string name="documents_screen_filters_title">@string/generic_filters_title</string>
+    <string name="documents_screen_filters_sort_by">@string/generic_filters_sort_by</string>
+    <string name="documents_screen_filters_ascending">@string/generic_filters_ascending</string>
+    <string name="documents_screen_filters_descending">@string/generic_filters_descending</string>
     <string name="documents_screen_filters_sort_default">Default</string>
     <string name="documents_screen_filters_sort_date_issued">Date Issued</string>
     <string name="documents_screen_filters_sort_expiry_date">Expiry Date</string>
@@ -260,8 +266,8 @@
     <string name="documents_screen_filters_filter_by_expiry_period_2">Next 30 days</string>
     <string name="documents_screen_filters_filter_by_expiry_period_3">Beyond 30 days</string>
     <string name="documents_screen_filters_filter_by_expiry_period_4">Before today (expired)</string>
-    <string name="documents_screen_filters_apply">Apply</string>
-    <string name="documents_screen_filters_reset">Reset all</string>
+    <string name="documents_screen_filters_apply">@string/generic_filters_apply</string>
+    <string name="documents_screen_filters_reset">@string/generic_filters_reset</string>
 
     <!-- Transactions Screen -->
     <string name="transactions_screen_title">Transactions</string>
@@ -269,26 +275,29 @@
     <string name="transactions_screen_search_no_results_id">noTransactionsId</string>
     <string name="transactions_screen_search_no_results">No transactions match your search. Try changing your search query or filters.</string>
     <string name="transactions_screen_minutes_ago_message">%1$s minutes ago</string>
-    <string name="transactions_document_signing_type_label">s-Signature</string>
+    <string name="transactions_document_signing_type_label">e-Signature</string>
     <string name="transactions_screen_text_field_date_pattern">dd/mm/yyyy</string>
     <string name="transactions_filter_item_signed_documents">Signed Documents</string>
 
     <!-- Transactions Screen, Filter labels-->
-    <string name="transactions_screen_filters_title">Filter</string>
-    <string name="transactions_screen_filters_sort_by">Sort by</string>
+    <string name="transactions_screen_filters_title">@string/generic_filters_title</string>
+    <string name="transactions_screen_filters_sort_by">@string/generic_filters_sort_by</string>
+    <string name="transactions_screen_filters_ascending">@string/generic_filters_ascending</string>
+    <string name="transactions_screen_filters_descending">@string/generic_filters_descending</string>
+    <string name="transactions_screen_filters_sort_transaction_date">Transaction Date</string>
     <string name="transactions_screen_filter_by_date_period">Filter by Transaction Date Period</string>
     <string name="transactions_screen_filter_by_status">Filter by Status</string>
     <string name="transactions_screen_filters_filter_by_relying_party">Filter by Relying Party</string>
     <string name="transactions_screen_filters_filter_by_attestation">Filter by Attestation</string>
     <string name="transactions_screen_filters_filter_by_document_signing">Filter by Document Signing</string>
-    <string name="transactions_screen_filters_ascending">Ascending</string>
-    <string name="transactions_screen_filters_descending">Descending</string>
     <string name="transactions_screen_filters_date_from">Date from</string>
     <string name="transactions_screen_filters_date_to">Date to</string>
     <string name="transactions_filter_item_status_completed">Completed</string>
     <string name="transactions_filter_item_status_failed">Failed</string>
     <string name="transactions_filter_item_no_relying_party_transactions">Transactions without relying party</string>
     <string name="transactions_filter_item_no_attestation_name_transactions">Transactions without attestation name</string>
+    <string name="transactions_screen_filters_apply">@string/generic_filters_apply</string>
+    <string name="transactions_screen_filters_reset">@string/generic_filters_reset</string>
 
     <!-- Document Sign -->
     <string name="document_sign_title">Sign Document</string>
