Refactor: Migrate Transaction Details and improve transactions management
- Removed `TransactionDetailsDomain` and `TransactionDetailsTransformer`.
- Migrated `TransactionDetailsUi` and related classes to `issuance-feature`.
- Updated `TransactionDetailsViewModel` to use the new `TransactionDetailsUi` and to support expansion/collapse of items in `ExpandableDataSection`.
- Updated `TransactionDetailsScreen` to use new models and added card view.
- Moved `TransactionLogUi`, `TransactionUiStatus`, and `TransactionUiType` to common-feature module.
- Updated `TransactionsViewModel` to remove test transactions and improve filtering logic.
- Updated `TransactionsInteractor` to remove mocked transactions and to improve filtering logic.
- Improved filter validator to support merging complex filters.
- Updated dependencies for transaction details.
- Added `ExpandableDataSection` to `TransactionDetailsScreen`.
- Updated `TransactionDetailsInteractor` to fetch data from `WalletCoreDocumentsController`.
- Updated `DocumentMetaData` to get localized name.
- Fixed issue where Base64 was not properly encoded.
- Improved date formatting.
- Improved display extensions to allow retrieval of the localized document name.
- Added support to `toClaimPath` extension.
- Updated `FilterItem` to be displayed correctly.

--- a/resources-logic/src/main/res/values/strings.xml
+++ b/resources-logic/src/main/res/values/strings.xml
@@ -347,9 +347,11 @@
     <string name="transaction_details_report_transaction_message">If you believe this relying party has unlawfully requested personal data, you can report this transaction to the authorities.</string>
     <string name="transaction_details_request_deletion_button">Request data deletion</string>
     <string name="transaction_details_report_transaction_button">Report suspicious transaction</string>
-    <string name="transaction_details_data_shared">DATA SHARED</string>
-    <string name="transaction_details_data_signed">DATA SIGNED</string>
-    <string name="transactions_screen_details_section_view_details">@string/generic_view_details</string>
+    <string name="transaction_details_data_shared_section_title">DATA SHARED</string>
+    <string name="transaction_details_data_shared_prefix_id">transactionDetailsDataSharedId</string>
+    <string name="transaction_details_data_signed_section_title">DATA SIGNED</string>
+    <string name="transaction_details_data_signed_prefix_id">transactionDetailsDataSignedId</string>
+    <string name="transaction_details_collapsed_supporting_text">@string/generic_view_details</string>
 
     <!-- Proximity QR -->
     <string name="proximity_qr_title">Present document in person</string>
