--- a/resources-logic/src/main/res/values/strings.xml
+++ b/resources-logic/src/main/res/values/strings.xml
@@ -280,7 +280,11 @@
     <string name="transactions_screen_search_label">Search Transactions</string>
     <string name="transactions_screen_search_no_results_id">noTransactionsId</string>
     <string name="transactions_screen_search_no_results">No transactions found. Try changing your search query or filters.</string>
-    <string name="transactions_screen_minutes_ago_message">%1$s minutes ago</string>
+    <string name="transactions_screen_0_minutes_ago_message">Just now</string>
+    <plurals name="transactions_screen_some_minutes_ago_message">
+        <item quantity="one">%d minute ago</item>
+        <item quantity="other">%d minutes ago</item>
+    </plurals>
     <string name="transactions_screen_text_field_date_pattern">dd/mm/yyyy</string>
 
     <!-- Transactions Screen, Filter labels-->
