Feat: Adds support for Batch Issuance.
- Introduced `DocumentCredentialsInfo.kt` to model document credential
usage information.
- Updated `DocumentDetailsScreen.kt` and `DocumentDetailsViewModel.kt`
to display and manage an expandable section for document credential
information.
- Updated `DocumentsInteractor.kt` to display document credential counts
in the document list if the feature is enabled.
- Added new string resources for the document credentials info section.
- Updated Gradle dependencies for `eudiWalletCore` to `0.17.0-SNAPSHOT`
and modified the Maven repository URL for snapshots.
- Adjusted `WalletCorePresentationController.kt` to correctly handle
key unlock data and crypto objects for signing.
- Updated `WalletCoreDocumentsController.kt` to align with changes in
the core library, particularly regarding `getDefaultCreateDocumentSettings`
and user authentication for document issuance.
- Minor UI adjustments in `ListItem.kt` for trailing content.

- Replaced `DocumentMetaData` with `IssuerMetadata` in `DocumentHelper.kt`,
`DisplayExtensions.kt`, and `DocumentsExtensions.kt`.
- Updated `DocumentDetailsTransformer.kt` to use `IssuerMetadata`.
- Modified tests in `TestDocumentDetailsInteractor.kt`,
`TestDocumentsInteractor.kt`, and other test files to reflect the
metadata and all the other changes that the new Core version introduced (particularly the fact that IssuedDocument is no longer a data class.

--- a/resources-logic/src/main/res/values/strings.xml
+++ b/resources-logic/src/main/res/values/strings.xml
@@ -192,6 +192,7 @@
     <string name="dashboard_document_deferred_pending">Pending</string>
     <string name="dashboard_document_deferred_failed">Issuance failed</string>
     <string name="dashboard_document_revoked">Revoked</string>
+    <string name="dashboard_document_credentials_info_text">%d/%d</string>
 
     <string name="dashboard_bottom_sheet_bluetooth_title">Enable bluetooth?</string>
     <string name="dashboard_bottom_sheet_bluetooth_subtitle">Enable bluetooth to share your information using the Authenticate in person or online option</string>
@@ -329,7 +330,6 @@
 
     <!-- Document Details -->
     <string name="document_details_revoked_document_message">This document has been revoked by the issuer. Contact the issuing service for more information.</string>
-    <string name="document_details_portrait_readable_identifier">Shown above</string>
     <string name="document_details_boolean_item_true_readable_value">yes</string>
     <string name="document_details_boolean_item_false_readable_value">no</string>
 
@@ -338,6 +338,10 @@
     <string name="document_details_bottom_sheet_delete_primary_button_text">@string/generic_bottom_sheet_delete_primary_button_text</string>
     <string name="document_details_bottom_sheet_delete_secondary_button_text">@string/generic_bottom_sheet_delete_secondary_button_text</string>
 
+    <string name="document_details_document_credentials_info_text">%d/%d instances remaining</string>
+    <string name="document_details_document_credentials_info_more_info_text">More info</string>
+    <string name="document_details_document_credentials_info_expanded_text_subtitle">For security reasons, this document can be shared a limited number of times before it needs to be re-issued by the issuing authority.</string>
+    <string name="document_details_document_credentials_info_expanded_button_hide_text">Hide</string>
     <string name="document_details_main_section_text">DOCUMENT DETAILS</string>
     <string name="document_details_issuer_section_text">ISSUER</string>
     <string name="document_details_secondary_button_text">Delete document</string>
