Refactor: Remove setting for displaying Batch Issuance counter.
- Removed from the Settings Screen the toggle for showing/hiding the batch issuance counter. Now it will always be visible, both in the Documents Tab and in the Document Details Screen.
- Add Document Screen now has a data class where is config is parameterized, instead of a simple enum.
- If Add Document Screen gets loaded with IssuanceFlowType.ExtraDocument and its FormatType is not null and matches some of the Issuer's supported documents, then only those documents will be displayed on its list. Existing functionality to also filter and show only the PIDs if the screen was loaded with  IssuanceFlowType.NoDocument remains unchanged.
- In the Documents Tab, if a document is running out of credentials (<=1 and its policy is OneTimeUse) then a warning icon will be displayed.
- For the same scenario, in the Document Details Screen, the Credential Info section will be expanded by default (otherwise it will be collapsed) and it will also show a "Issue new" button(otherwise it will not be shown at all). Upon clicking it the User will be navigated to the Add Documents Screen with only this document displayed in its list.
- getShowBatchIssuanceCounter() and setShowBatchIssuanceCounter() have been removed from the PrefKeys. All related strings, usages and dependencies have also been removed.
- Navigation to the Add Document Screen has been updated and adjusted across the whole project.

- Added new unit tests in the TestAddDocumentInteractor.kt to test these new changes.
- Updated existing tests.

--- a/resources-logic/src/main/res/values/strings.xml
+++ b/resources-logic/src/main/res/values/strings.xml
@@ -218,8 +218,6 @@
 
     <!-- Settings Screen -->
     <string name="settings_screen_title">Settings</string>
-    <string name="settings_screen_option_show_batch_issuance_counter">Batch issuance counter</string>
-    <string name="settings_screen_option_show_batch_issuance_counter_id">batchIssuanceCounterId</string>
     <string name="settings_screen_option_retrieve_logs">Retrieve logs</string>
     <string name="settings_screen_option_retrieve_logs_id">retrieveLogsId</string>
     <string name="settings_screen_option_changelog">Changelog</string>
@@ -340,6 +338,7 @@
     <string name="document_details_document_credentials_info_text">%d/%d instances remaining</string>
     <string name="document_details_document_credentials_info_more_info_text">More info</string>
     <string name="document_details_document_credentials_info_expanded_text_subtitle">For security reasons, this document can be shared a limited number of times before it needs to be re-issued by the issuing authority.</string>
+    <string name="document_details_document_credentials_info_expanded_button_update_now_text">Issue new</string>
     <string name="document_details_document_credentials_info_expanded_button_hide_text">Hide</string>
     <string name="document_details_main_section_text">DOCUMENT DETAILS</string>
     <string name="document_details_issuer_section_text">ISSUER</string>
@@ -384,6 +383,7 @@
     <!-- Issuance Add Document Screen -->
     <string name="issuance_add_document_title">Add document from list</string>
     <string name="issuance_add_document_subtitle">Choose a digital document from the list below to add to your wallet.</string>
+    <string name="issuance_add_document_no_options">No available documents</string>
     <string name="issuance_add_document_scan_qr_footer_text">@string/generic_or</string>
     <string name="issuance_add_document_scan_qr_footer_button_text">@string/generic_scan_qr</string>
     <string name="issuance_add_document_deferred_success_text">@string/generic_deferred_success_text</string>
